fix math/Permutation: Version change